--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<com.ddscanner.ui.views.CustomSwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swiperefresh"
     android:layout_width="match_parent"
@@ -607,4 +607,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </RelativeLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
+</com.ddscanner.ui.views.CustomSwipeRefreshLayout>
