--- a/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -11,17 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="@color/primary"
-        android:minHeight="?actionBarSize"
-        auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        auto:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:contentInsetLeft="0dp"
-        android:contentInsetStart="0dp"
-        app:contentInsetLeft="0dp"
-        app:contentInsetStart="0dp"
-        android:contentInsetRight="0dp"
         android:contentInsetEnd="0dp"
+        android:contentInsetLeft="0dp"
+        android:contentInsetRight="0dp"
+        android:contentInsetStart="0dp"
+        android:minHeight="?actionBarSize"
+        app:contentInsetEnd="0dp"
+        app:contentInsetLeft="0dp"
         app:contentInsetRight="0dp"
-        app:contentInsetEnd="0dp">
+        app:contentInsetStart="0dp"
+        auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        auto:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -34,31 +34,33 @@
                 android:layout_height="match_parent"
                 app:layout_widthPercent="60%"
                 auto:tabIndicatorColor="@android:color/transparent" />
+
             <android.support.percent.PercentRelativeLayout
                 android:id="@+id/menu_items_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/toolbar_tablayout"
                 android:animateLayoutChanges="true"
-                app:layout_widthPercent="40%"
-                android:layout_toRightOf="@+id/toolbar_tablayout">
-            <ImageView
-                android:id="@+id/filter_menu_button"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackground"
-                android:scaleType="center"
-                android:src="@drawable/ic_ac_filter"
-                app:layout_widthPercent="50%" />
+                app:layout_widthPercent="40%">
 
-            <ImageView
-                android:id="@+id/search_location_menu_button"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/filter_menu_button"
-                android:background="?attr/selectableItemBackground"
-                android:scaleType="center"
-                android:src="@drawable/ic_ac_search"
-                app:layout_widthPercent="50%" />
+                <ImageView
+                    android:id="@+id/filter_menu_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_ac_filter"
+                    app:layout_widthPercent="50%" />
+
+                <ImageView
+                    android:id="@+id/search_location_menu_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/filter_menu_button"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_ac_search"
+                    app:layout_widthPercent="50%" />
             </android.support.percent.PercentRelativeLayout>
         </android.support.percent.PercentRelativeLayout>
     </android.support.v7.widget.Toolbar>
@@ -66,5 +68,5 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/main_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
