--- a/trunk/ddscanner/app/src/main/res/layout/tab_map_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/tab_map_item.xml
@@ -1,4 +1,4 @@
-<ImageView android:layout_width="wrap_content"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/selector_tab_map"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:src="@drawable/selector_tab_map" />
