--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -78,6 +78,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <com.ddscanner.ui.views.FlingableNestedScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#fbfbfb"
