--- a/trunk/ddscanner/app/src/main/res/layout/item_full_achievment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_full_achievment.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="6dp"
     android:background="@color/white">
 
@@ -47,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="#959595"
                 android:textSize="11sp"
-                android:text="Vietnam"
+                tools:text="Vietnam"
                 android:layout_marginLeft="15dp"/>
         </LinearLayout>
         <TextView
