--- a/trunk/ddscanner/app/src/main/res/layout/item_full_achievment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_full_achievment.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="6dp"
     android:background="@color/white">
 
@@ -22,12 +23,14 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_centerVertical="true"
             android:id="@+id/country_flag"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:background="@color/black_text" />
+            app:civ_border_width="2dp"
+            app:civ_border_color="#f9f9f9"
+            />
         <LinearLayout
             android:id="@+id/info"
             android:layout_centerVertical="true"
