--- a/trunk/ddscanner/app/src/main/res/layout/activity_foreign_user.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_foreign_user.xml
@@ -233,8 +233,19 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="vertical">
-
+            <TextView
+                android:id="@+id/no_achievements_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/no_title_yet"
+                android:paddingBottom="12dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="12dp"
+                android:textColor="#a3a3a3"
+                android:textSize="15sp"/>
             <android.support.v7.widget.RecyclerView
+                android:visibility="gone"
                 android:id="@+id/achievment_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
