--- a/trunk/ddscanner/app/src/main/res/layout/activity_ahievments.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_ahievments.xml
@@ -20,4 +20,26 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <RelativeLayout
+        android:visibility="gone"
+        android:id="@+id/no_achievements_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
+        <ImageView
+            android:layout_marginTop="82dp"
+            android:id="@+id/icon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_noachiev"/>
+        <TextView
+            android:layout_below="@+id/icon"
+            android:id="@+id/title"
+            style="@style/ErrorsViewTitleStyle"
+            android:text="@string/no_achievements_yet"/>
+        <TextView
+            android:layout_below="@+id/title"
+            style="@style/ErrorsViewSubTitleStyle"
+            android:text="@string/start_acivity"/>
+    </RelativeLayout>
 </LinearLayout>
