--- a/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:gravity="center_vertical">
     <TextView
+        android:layout_centerVertical="true"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
