--- a/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
@@ -7,11 +7,12 @@
     android:layout_height="wrap_content"
     android:minHeight="65dp"
     android:background="#fbfbfb">
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <RelativeLayout
+            android:id="@+id/image_layout"
             android:layout_width="64dp"
             android:layout_height="64dp">
         <ImageView
@@ -31,32 +32,35 @@
                 android:layout_marginBottom="10dp"
                 />
         </RelativeLayout>
-        <android.support.percent.PercentRelativeLayout
+        <RelativeLayout
             android:id="@+id/content"
+            android:layout_toRightOf="@+id/image_layout"
             android:background="?attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
             android:id="@+id/text"
+            android:layout_toLeftOf="@+id/time_ago"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            app:layout_widthPercent="85%"
             android:layout_height="wrap_content"
             android:textColor="@color/black_text"
+            android:layout_width="match_parent"
             android:textSize="15sp"
             android:paddingBottom="10dp"/>
         <TextView
-            android:layout_toRightOf="@+id/text"
             android:id="@+id/time_ago"
             android:layout_marginTop="13dp"
-            android:gravity="right"
+            android:gravity="center"
             android:layout_marginRight="15dp"
-            app:layout_widthPercent="15%"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:textColor="#a3a3a3"
+            android:layout_alignParentRight="true"
             tools:text="1w"/>
-        </android.support.percent.PercentRelativeLayout>
-    </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
     <ImageView
         style="@style/DividerStyleFull" />
 </LinearLayout>
