--- a/trunk/ddscanner/app/src/main/res/layout/item_full_achievment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_full_achievment.xml
@@ -54,7 +54,7 @@
         <TextView
             android:id="@+id/progress"
             android:text="49/50"
-            android:layout_centerVertical="true"
+            android:layout_alignParentBottom="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
