~ achievement notification click listener

--- a/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
@@ -62,5 +62,6 @@
         </RelativeLayout>
     </RelativeLayout>
     <ImageView
+        android:id="@+id/bottom_divider"
         style="@style/DividerStyleFull" />
 </LinearLayout>
