--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -178,7 +178,7 @@
 
     <style name="DividerStyleFull">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">1dp</item>
         <item name="android:scaleType">centerCrop</item>
         <item name="android:src">@drawable/divider</item>
     </style>
