--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="green_600">#43A047</color>
 
     <!--Amber-->
-    <color name="accent">#095370</color>
+    <color name="accent">#CFD8DC</color>
 
     <color name="amber_100">#FFECB3</color>
     <color name="amber_200">#FFE082</color>
