--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -69,12 +69,11 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <at.blogc.android.views.ExpandableTextView
+        <TextView
             android:id="@+id/review"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
-            android:ellipsize="end"
             tools:text="Vwry very good spot in whateewer very good play market bla bla bla bla "
             android:textColor="@color/black_text"
             android:textSize="14sp" />
