--- a/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
@@ -35,7 +35,29 @@
             android:textColor="#f6f6f6"
             android:textSize="17sp" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="53dp">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            style="@style/OrangeButtons"
+            android:text="sign up"/>
 
+        <Button
+            android:layout_marginTop="13dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            style="@style/OrangeButtons"
+            android:background="@drawable/splash_activity_login"
+            android:textColor="@color/orange"
+            android:text="login"/>
+    </LinearLayout>
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
