--- a/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
@@ -47,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             style="@style/OrangeButtons"
-            android:text="sign up"/>
+            android:text="@string/sign_up"/>
 
         <Button
             android:layout_marginTop="13dp"
@@ -56,7 +56,7 @@
             style="@style/OrangeButtons"
             android:background="@drawable/splash_activity_login"
             android:textColor="@color/orange"
-            android:text="login"/>
+            android:text="@string/login"/>
     </LinearLayout>
     <TextView
         android:id="@+id/message"
