--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -723,6 +723,7 @@
     </ScrollView>
 
     <com.ddscanner.ui.views.LoginView
+        android:id="@+id/login_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible"
