+ click methods for chosing photos

--- a/trunk/ddscanner/app/src/main/res/layout/activity_sealife_full.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_sealife_full.xml
@@ -34,7 +34,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     app:layout_collapseMode="parallax"
-                    app:sealifeViewModel="@{sealifeViewModel}"/>
+                    app:loadImageFrom="@{sealifeViewModel}"/>
 
                 <ProgressBar
                     android:id="@+id/progress_bar"
