~ complete changing for getting achievements accroding new API version

--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -263,7 +263,8 @@
                             android:layout_height="55dp"
                             android:background="?attr/selectableItemBackground"
                             android:gravity="center_vertical"
-                            android:paddingLeft="20dp">
+                            android:paddingLeft="20dp"
+                            android:onClick="@{handlers::showAchievementsDetails}">
 
                             <ImageView
                                 android:id="@+id/icon"
